--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ h1 { font-size: 2.8em; }
 <body>
 
 <h1>☢️ Doomsday Clock</h1>
+<img src="EDAC63F8-D1AE-401D-A1CF-3E149C6D9754.png"
+  alt="Doomsday image"
+  style="max-width: 300px; margin: 20px auto; display: block;"
+>
 <h2>31 March 2027</h2>
 
 <div id="countdown">Calculating inevitable outcome…</div>
